tests/snapshots/run_wpt_conformance__coreml_prelu_float32_broadcast_4D_x_2D_slope.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu float32 broadcast 4D x 2D slope, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type prelu: Param 'alpha' has incorrect type for operator 'ios17.prelu'. Expected { [?]>, [?]>, tensor<fp16, tensor<fp32 }; got tensor<fp32, [2, 3]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    preluInput: f32[2, 2, 2, 3];
  }

  consts {
    operand_1: f32[2, 3] @bytes([18, 250, 155, 64, 177, 6, 8, 193, 99, 73, 151, 63, 87, 195, 31, 193, 18, 147, 141, 192, 43, 243, 212, 192]);
  }

  nodes {
    [preluOutput] = prelu(preluInput, operand_1, label="");
  }

  outputs { preluOutput; }
}
