tests/snapshots/run_wpt_conformance__coreml_prelu_int64_2D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu int64 2D constant tensors, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported constant data type: Int64

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: i64[3, 3] @bytes([252, 255, 255, 255, 255, 255, 255, 255, 254, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0]);
    operand_1: i64[3, 3] @bytes([251, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 251, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 251, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0]);
  }

  nodes {
    [preluOutput] = prelu(operand_0, operand_1, label="");
  }

  outputs { preluOutput; }
}
